manifests/system/cert-manager/test-local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: test-ca-issuer
  name: test-web-1-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
  tls:
    - hosts:
      - test.local
      secretName: test-local-tls
